generated/checkers/gen/AllGen-Memory-Leak-51df947678360faf1967fe0bd1a40c681f634104/build_logs/syntax-repair-02/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:155:54: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::Stmt*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  155 |     const MemRegion *CurR = State->get<LoopCurResMap>(Loop);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                      |
      |                                                      clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::Stmt*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:176:54: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::Stmt*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  176 |     const MemRegion *CurR = State->get<LoopCurResMap>(Loop);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                      |
      |                                                      clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::Stmt*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreStmt(const clang::GotoStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:198:52: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::Stmt*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  198 |   const MemRegion *CurR = State->get<LoopCurResMap>(Loop);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                    |
      |                                                    clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::Stmt*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
